src/ADSM/static/css/adsm.css
/* ... */
section .btn-primary:focus,
.btn-unsaved:focus,
.btn-danger:focus {
    outline: 2px solid rgba(99, 215, 253, .5) !important;
    color:white;
}
.btn-danger:focus {
    border:none;
    background-color: #e0383e;
}

.btn-primary.disabled, .btn-primary[disabled] {
    background-color: #ccc;
    color: rgba(255, 255, 255, .8);
}
.btn-danger {
    background-color: #d0343a;
    transition: all .2s ease;
}

.btn-danger:hover{
    background-color:#e0383e;
}

textarea {
    width: 400px;
    height: 70px;
}

#id_description {
    width: 602px; 
    height: 200px;
}

td, th {
    padding-bottom: 8px;
    padding-right: 10px;
}

th, td label{
    padding-right: 20px;
    font-size: 11pt;
}

.result-table {
    table-layout: fixed;
}

.result-table tr th:first-child {
    width: 420px;
}

.result-table thead tr th {
    font-size: 16pt;
    font-weight: bold;
}

ul.minor {
    list-style-type: circle;
    color: #808080;
}
ul.minor li {
    font-size: 11pt;
}

select {
    margin: 8px 4px;
}

.progress .status-text {
    position: absolute;
    width: 100%;
    text-align: center;
    font-size: 15px;
    color: #404040;
    line-height: 20px;
}
.progress {
    border-radius: 2px;
}
.progress-bar.done {
    background-color: #68be5e;
}
.placeholder {
    position: relative;
    margin-left: 16.66vw;
    height: 60px;
    padding-top: 20px;
}
.placeholder p {
    display:inline;
    font-size: 15px;
    color: #a1a1a1;
    font-weight: 300;
    margin-right: 10px;
}
.placeholder img {
    display:inline;
    width: 30px;
}
.placeholder:after {
    content: "";
    display: block;
    position: absolute;
    left: 130px;
    top: 20px;
    height: 20px; 
    background-color: white;
    opacity: .3;
    -webkit-animation: Placeholder-wash .98s infinite;
}

@-webkit-keyframes Placeholder-wash {
    0% {left: 119px;
        width: 11px;}
    100% {left: 130px;
        width: 0px;}
}
/**********************/

#file_list li {
    font-size: 13px;
    line-height:27px;
    text-decoration: none;
    border-bottom: 1px solid #ebebeb;
    padding-left: 5px;
}

#file_list {
    list-style: none;
    margin-top: 5px;
    margin-bottom: 27px;
    max-width: 600px
}

#file_list a {
    color: black;
    text-decoration: none;
}

#file_list a:hover {
    color: #7cb9ff;;
}

#file_list .icon {
    margin-top: 5px;
    margin-left: 15px;
}
.delete-button,
.copy-button {
    margin-top: 5px;
    width: 15px;
    height: 18px;
    margin-right: 10px;
}

/*noinspection CssOptimizeSimilarProperties,CssOptimizeSimilarProperties, CssUnknownTarget*/
.copy-button {
    background-image: url('/static/icons/copy_sprite.png');
    background-position: 0 0;
}

/*noinspection CssOptimizeSimilarProperties,CssOptimizeSimilarProperties, CssUnknownTarget*/
.copy-button:hover,
.copy-button:focus {
    background-image: url('/static/icons/copy_sprite.png');
    background-position: 15px  0;
}

/*noinspection CssOptimizeSimilarProperties,CssOptimizeSimilarProperties, CssUnknownTarget*/
.delete-button {
    background-image: url('/static/icons/delete_sprite.png');
    background-repeat-y: no-repeat;
    background-position: 0 2px;
}
.delete-button:hover,
.delete-button:focus {
    background-position: 15px 2px ;
}

input[type=file], button {
    display: inline;
}

#div_id_name div input {
    min-width: 400px;
}

#file_list .addNew {
    border-bottom: none;
}

#file_list .addNew a{
    color: #3577b1;
    opacity: .8;
    transition: opacity .2s ease;
}

#file_list .addNew a:hover {
    opacity: 1;
}
/*-------------------------------------------------------------*/
/*-----population.html-----*/
/*-------------------------------------------------------------*/
#replace_population {
    padding-top: 3px;
    padding-left: 10px;
}
#farm_list table, #farm_list tr, #farm_list td {
    border-width: 0;
    margin: 0;
    padding: 0;
    border: none;
    border-collapse: collapse;
}
#population_grid_wraper{
    margin-left: calc(16.666vw - 280px); /*--remove and add col-xs-9 to html--*/
    width: calc(74.997vw + 20px);
    padding: 10px;
    background: white;
    position: relative;
    display: block;
    border-radius: 2px;
    overflow-y:auto;
}

#population_map_container {
    min-height: 23.333vw;
}
#unit_map {
    padding: 0;
    margin: 0;
    width: calc(100% + 15px);
    float: left;
    margin-left: -15px;
    margin-top: -6px;
}
#refresh_map {
    position: absolute;
    right: 20px;
    top: 0;
}
#farm_list_container{
    float: right;
    width: 49.98vw;
    overflow-x: auto;
    padding-left: 0px;
}

#farm_list table {
    table-layout: fixed;
    border-collapse: collapse;
    white-space: normal;
    border-spacing: 0;
    position: relative;
    width: 100%;
    min-width: 630px;
}
#farm_list thead:before {
    position: absolute;
    content: "";
    width: 100%;
    height: 6px;
    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(0,0,0,0.15)), color-stop(100%,rgba(0,0,0,0)));
    top: 30px;
    z-index: 10;
}
#farm_list thead{
    background-color: #808080;
    width: 100%;
    position: relative;
    white-space: nowrap;
    min-width: 660px;
}
#farm_list th{
    padding: 8px 0px 4px 10px;
    white-space: nowrap;
    background: transparent;
    color: white; 
    font-size: 13px;
    font-weight: 300;
    overflow: hidden;
    display: inline-block;
    position: relative;
}
#farm_list th, #farm_list td {
    width: 17%;
}

#farm_list tbody{
    display: inline-block;
    height: calc(100vh - 250px);
    overflow-y: auto;
    width: 100%;
    position: relative;
}
#farm_list table:after {
    position: absolute;
    content: "";
    width: 100%;
    height: 6px;
    display: block;
    background: -webkit-gradient(linear, left bottom, left top, color-stop(0%,rgba(0,0,0,0.15)), color-stop(100%,rgba(0,0,0,0)));
    bottom: 0px;
}
#farm_list tr:nth-child(even) {
    background: #f7f7f7;
}
/* ... */

